@@ -3,8 +3,10 @@ package com.aziz.demosec.service;
 import com.aziz.demosec.Entities.Doctor;
 import com.aziz.demosec.domain.Role;
 import com.aziz.demosec.domain.User;
+import com.aziz.demosec.dto.user.ChangePasswordDTO;
 import com.aziz.demosec.dto.user.UserRequestDTO;
 import com.aziz.demosec.dto.user.UserResponseDTO;
+import com.aziz.demosec.repository.PharmacistRepository;
 import com.aziz.demosec.repository.UserRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
@@ -18,16 +20,18 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 @Transactional
-public class UserServiceImpl implements IUserService {
+public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
+    private final PharmacistRepository pharmacistRepository;
 
     @Override
     public UserResponseDTO create(UserRequestDTO dto) {
         if (userRepository.existsByEmail(dto.getEmail())) {
             throw new IllegalArgumentException("Email already in use: " + dto.getEmail());
         }
+
         User user = User.builder()
                 .fullName(dto.getFullName())
                 .email(dto.getEmail())
@@ -58,6 +62,7 @@ public class UserServiceImpl implements IUserService {
     @Override
     public UserResponseDTO update(Long id, UserRequestDTO dto) {
         User user = findOrThrow(id);
+
         if (dto.getFullName() != null) user.setFullName(dto.getFullName());
         if (dto.getEmail() != null) {
             if (!user.getEmail().equals(dto.getEmail()) && userRepository.existsByEmail(dto.getEmail())) {
@@ -65,12 +70,13 @@ public class UserServiceImpl implements IUserService {
             }
             user.setEmail(dto.getEmail());
         }
-        if (dto.getPassword() != null && !dto.getPassword().trim().isEmpty()) {
+        if (dto.getPassword() != null && !dto.getPassword().isBlank()) {
             user.setPassword(passwordEncoder.encode(dto.getPassword()));
         }
         if (dto.getRole() != null) user.setRole(dto.getRole());
         if (dto.getPhone() != null) user.setPhone(dto.getPhone());
         if (dto.getBirthDate() != null) user.setBirthDate(dto.getBirthDate());
+
         return toDTO(userRepository.save(user));
     }
 
@@ -100,8 +106,9 @@ public class UserServiceImpl implements IUserService {
     @Override
     @Transactional(readOnly = true)
     public UserResponseDTO getByEmail(String email) {
-        return toDTO(userRepository.findByEmail(email)
-                .orElseThrow(() -> new EntityNotFoundException("User not found: " + email)));
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new EntityNotFoundException("User not found: " + email));
+        return toDTO(user);
     }
 
     @Override
@@ -117,6 +124,18 @@ public class UserServiceImpl implements IUserService {
         return toDTO(userRepository.save(user));
     }
 
+    @Override
+    public void changePassword(Long id, ChangePasswordDTO dto) {
+        User user = findOrThrow(id);
+
+        if (!passwordEncoder.matches(dto.getCurrentPassword(), user.getPassword())) {
+            throw new IllegalArgumentException("Current password is incorrect");
+        }
+
+        user.setPassword(passwordEncoder.encode(dto.getNewPassword()));
+        userRepository.save(user);
+    }
+
     private User findOrThrow(Long id) {
         return userRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + id));
@@ -127,7 +146,8 @@ public class UserServiceImpl implements IUserService {
         if (user instanceof Doctor) {
             specialty = ((Doctor) user).getSpecialty();
         }
-        return UserResponseDTO.builder()
+
+        UserResponseDTO.UserResponseDTOBuilder builder = UserResponseDTO.builder()
                 .id(user.getId())
                 .fullName(user.getFullName())
                 .email(user.getEmail())
@@ -136,7 +156,17 @@ public class UserServiceImpl implements IUserService {
                 .birthDate(user.getBirthDate())
                 .photo(user.getPhoto())
                 .enabled(user.isEnabled())
-                .specialty(specialty)
-                .build();
+                .specialty(specialty);
+
+        if (user.getRole() == Role.PHARMACIST) {
+            pharmacistRepository.findById(user.getId()).ifPresent(pharmacist -> {
+                if (pharmacist.getPharmacy() != null) {
+                    builder.pharmacyId(pharmacist.getPharmacy().getId());
+                    builder.pharmacyName(pharmacist.getPharmacy().getName());
+                }
+            });
+        }
+
+        return builder.build();
     }
 }
